[gd_scene load_steps=26 format=3 uid="uid://d1r2od8tahr5j"]

[ext_resource type="Script" path="res://world-1/level-3.gd" id="1_4fh2m"]
[ext_resource type="PackedScene" uid="uid://crda7h07fpjk7" path="res://background/bg-1.tscn" id="2_m3fk7"]
[ext_resource type="TileSet" uid="uid://c5r0gb6eiq8uo" path="res://world-1/tiles.tres" id="3_cu7cq"]
[ext_resource type="Texture2D" uid="uid://efxq6ghxya0k" path="res://assets/deco/tree.png" id="4_t23u4"]
[ext_resource type="PackedScene" uid="uid://d2eqm7p84trwd" path="res://item/flag.tscn" id="4_yjwje"]
[ext_resource type="PackedScene" uid="uid://840netei5g67" path="res://player.tscn" id="5_4j5nb"]
[ext_resource type="PackedScene" uid="uid://lxg87svmucji" path="res://item/sign.tscn" id="6_2gjov"]
[ext_resource type="PackedScene" uid="uid://ckiptfoim47l7" path="res://ui/sign-layer.tscn" id="6_lr767"]
[ext_resource type="FontFile" uid="uid://b7u7rptev1prg" path="res://assets/ui/FutilePro.ttf" id="7_ilae5"]
[ext_resource type="Texture2D" uid="uid://be4bgb7ari74w" path="res://assets/effects/exclamation.png" id="7_rdd1u"]
[ext_resource type="PackedScene" uid="uid://dbvda8s0e6hb0" path="res://ui/exit.tscn" id="8_6x3ix"]
[ext_resource type="PackedScene" uid="uid://ddr3p8bb8j53h" path="res://ui/egg.tscn" id="9_fji2h"]
[ext_resource type="Texture2D" uid="uid://cgy2qb2i2anql" path="res://assets/ui/clock.png" id="10_7r0pf"]
[ext_resource type="Texture2D" uid="uid://c0b8rpxhk3qu7" path="res://assets/player/chicken.png" id="10_gphno"]
[ext_resource type="PackedScene" uid="uid://c2cryihqjouuf" path="res://enemy/bear-brown.tscn" id="10_vsvf7"]
[ext_resource type="Texture2D" uid="uid://bhscy56dm774q" path="res://assets/ui/coin.png" id="11_xvkvi"]
[ext_resource type="Texture2D" uid="uid://bpdy8576brn0x" path="res://assets/objects/gem.png" id="12_lwgru"]
[ext_resource type="PackedScene" uid="uid://dbewfbkrvukv4" path="res://ui/gold.tscn" id="13_gl4ek"]
[ext_resource type="PackedScene" uid="uid://663aj70tr80x" path="res://ui/health.tscn" id="14_hr6wk"]
[ext_resource type="PackedScene" uid="uid://1lqlbp5gk61q" path="res://ui/pause.tscn" id="15_gx56j"]
[ext_resource type="PackedScene" uid="uid://dxjdud5ybsqhx" path="res://ui/control.tscn" id="16_8anjg"]

[sub_resource type="AtlasTexture" id="AtlasTexture_0mlnu"]
atlas = ExtResource("7_rdd1u")
region = Rect2(16, 0, 16, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_ewubf"]
atlas = ExtResource("7_rdd1u")
region = Rect2(64, 0, 16, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_xmvoj"]
atlas = ExtResource("7_rdd1u")
region = Rect2(80, 0, 16, 16)

[sub_resource type="SpriteFrames" id="SpriteFrames_kd8oj"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_0mlnu")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_ewubf")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_xmvoj")
}],
"loop": true,
"name": &"Idle",
"speed": 2.0
}]

[node name="World" type="Node2D"]
position = Vector2(41, 274)
script = ExtResource("1_4fh2m")

[node name="BG" parent="." instance=ExtResource("2_m3fk7")]

[node name="TileMap" type="TileMap" parent="."]
position = Vector2(-1, -2)
tile_set = ExtResource("3_cu7cq")
format = 2
layer_0/tile_data = PackedInt32Array(1245185, 196608, 1, 1245186, 262144, 1, 1245187, 196608, 1, 1245188, 262144, 1, 1245189, 196608, 1, 1245190, 262144, 1, 1245191, 196608, 1, 1245192, 196608, 1, 1245193, 262144, 1, 1245194, 262144, 1, 1245195, 262144, 1, 1179653, 196608, 0, 1179659, 196608, 0, 1245184, 196608, 1, 1310719, 196608, 1, 1310718, 131072, 1, 1179650, 131072, 0, 1245183, 327680, 0, 1179648, 196608, 0, 1376254, 65536, 3, 1441790, 65536, 3, 1507326, 65536, 3, 1572862, 65536, 3, 1376255, 262144, 3, 1441791, 262144, 3, 1507327, 196608, 3, 1572863, 262144, 3, 1310720, 262144, 3, 1376256, 196608, 3, 1441792, 262144, 3, 1507328, 196608, 2, 1310721, 131072, 3, 1376257, 262144, 3, 1441793, 262144, 3, 1507329, 262144, 3, 1310722, 262144, 3, 1376258, 131072, 3, 1441794, 262144, 3, 1507330, 262144, 3, 1310723, 262144, 3, 1376259, 262144, 3, 1441795, 262144, 3, 1507331, 131072, 3, 1310724, 262144, 2, 1376260, 262144, 3, 1441796, 262144, 3, 1507332, 262144, 3, 1310725, 262144, 3, 1376261, 196608, 3, 1441797, 262144, 3, 1507333, 262144, 3, 1310726, 262144, 3, 1376262, 262144, 3, 1441798, 262144, 3, 1507334, 131072, 3, 1310727, 262144, 3, 1376263, 196608, 2, 1441799, 262144, 3, 1507335, 262144, 3, 1310728, 327680, 3, 1376264, 262144, 3, 1441800, 262144, 3, 1507336, 196608, 2, 1310729, 262144, 3, 1376265, 262144, 3, 1441801, 262144, 3, 1507337, 262144, 3, 1310730, 262144, 3, 1376266, 262144, 3, 1441802, 131072, 3, 1507338, 262144, 3, 1310731, 262144, 3, 1376267, 262144, 3, 1441803, 262144, 3, 1507339, 262144, 3, 1245196, 196608, 1, 1245197, 262144, 1, 1245198, 196608, 1, 1245199, 262144, 1, 1245200, 196608, 1, 1245201, 196608, 1, 1245202, 196608, 1, 1245203, 262144, 1, 1245204, 196608, 1, 1245205, 262144, 1, 1245206, 262144, 1, 1245207, 196608, 1, 1245208, 262144, 1, 1245209, 196608, 1, 1245210, 262144, 1, 1245211, 262144, 1, 1245212, 196608, 1, 1245213, 196608, 1, 1245214, 131072, 2, 1310732, 262144, 3, 1376268, 262144, 3, 1441804, 196608, 3, 1507340, 262144, 3, 1310733, 262144, 3, 1376269, 196608, 3, 1441805, 262144, 3, 1507341, 196608, 2, 1310734, 131072, 3, 1376270, 262144, 3, 1441806, 262144, 3, 1507342, 262144, 3, 1310735, 262144, 3, 1376271, 131072, 3, 1441807, 262144, 3, 1507343, 262144, 3, 1310736, 262144, 3, 1376272, 262144, 3, 1441808, 262144, 3, 1507344, 131072, 3, 1310737, 262144, 2, 1376273, 262144, 3, 1441809, 262144, 3, 1507345, 262144, 3, 1310738, 262144, 3, 1376274, 196608, 3, 1441810, 262144, 3, 1507346, 262144, 3, 1310739, 262144, 3, 1376275, 262144, 3, 1441811, 262144, 3, 1507347, 131072, 3, 1310740, 262144, 3, 1376276, 196608, 2, 1441812, 262144, 3, 1507348, 262144, 3, 1310741, 327680, 3, 1376277, 262144, 3, 1441813, 262144, 3, 1507349, 196608, 2, 1310742, 262144, 3, 1376278, 262144, 3, 1441814, 262144, 3, 1507350, 262144, 3, 1310743, 262144, 3, 1376279, 262144, 3, 1441815, 131072, 3, 1507351, 262144, 3, 1310744, 262144, 3, 1376280, 262144, 3, 1441816, 262144, 3, 1507352, 262144, 3, 1310745, 262144, 3, 1376281, 262144, 3, 1441817, 196608, 3, 1507353, 262144, 3, 1310746, 262144, 3, 1376282, 196608, 3, 1441818, 262144, 3, 1507354, 196608, 2, 1310747, 131072, 3, 1376283, 262144, 3, 1441819, 262144, 3, 1507355, 262144, 3, 1310748, 262144, 3, 1376284, 131072, 3, 1441820, 262144, 3, 1507356, 262144, 3, 1310749, 262144, 3, 1376285, 262144, 3, 1441821, 262144, 3, 1507357, 131072, 3, 1310750, 262144, 2, 1376286, 262144, 3, 1441822, 262144, 3, 1507358, 262144, 3, 1310751, 262144, 3, 1376287, 196608, 3, 1441823, 262144, 3, 1507359, 262144, 3, 1310752, 262144, 3, 1376288, 262144, 3, 1441824, 262144, 3, 1507360, 131072, 3, 1310753, 262144, 3, 1376289, 196608, 2, 1441825, 262144, 3, 1507361, 262144, 3, 1310754, 327680, 3, 1376290, 262144, 3, 1441826, 262144, 3, 1507362, 196608, 2, 1310755, 262144, 3, 1376291, 262144, 3, 1441827, 262144, 3, 1507363, 262144, 3, 1310756, 262144, 3, 1376292, 262144, 3, 1441828, 131072, 3, 1507364, 262144, 3, 1310757, 262144, 3, 1376293, 262144, 3, 1441829, 262144, 3, 1507365, 262144, 3, 1179678, 65536, 3, 1114142, 65536, 3, 1048606, 131072, 1, 1048607, 196608, 1, 1048608, 196608, 1, 1048609, 196608, 1, 1114143, 262144, 3, 1179679, 262144, 3, 1245216, 262144, 3, 1245217, 262144, 3, 1179681, 262144, 3, 1114145, 262144, 3, 1114144, 262144, 3, 1179680, 262144, 3, 1245215, 262144, 3)

[node name="Deco" type="Node2D" parent="."]

[node name="Tree" type="Sprite2D" parent="Deco"]
position = Vector2(119, 278)
texture = ExtResource("4_t23u4")

[node name="Items" type="Node2D" parent="."]

[node name="Features" type="Node2D" parent="."]

[node name="Note" type="AnimatedSprite2D" parent="Features"]
position = Vector2(151, 270)
sprite_frames = SubResource("SpriteFrames_kd8oj")
animation = &"Idle"

[node name="Sign" parent="Features" instance=ExtResource("6_2gjov")]
position = Vector2(151, 302)

[node name="Flag" parent="Features" instance=ExtResource("4_yjwje")]
position = Vector2(519, 254)

[node name="Player" parent="." instance=ExtResource("5_4j5nb")]
position = Vector2(63, 286)

[node name="Mobs" type="Node2D" parent="."]

[node name="BearBrown" parent="Mobs" instance=ExtResource("10_vsvf7")]
position = Vector2(287, 302)

[node name="UI" type="CanvasLayer" parent="."]

[node name="SignLayer" parent="UI" instance=ExtResource("6_lr767")]
position = Vector2(560, 320)

[node name="Chicken" type="Sprite2D" parent="UI/SignLayer"]
position = Vector2(-152, 48)
scale = Vector2(4, 4)
texture = ExtResource("10_gphno")
hframes = 4
vframes = 3
frame = 4

[node name="Chicken3" type="Sprite2D" parent="UI/SignLayer"]
position = Vector2(152, 48)
scale = Vector2(4, 4)
texture = ExtResource("10_gphno")
flip_h = true
hframes = 4
vframes = 3
frame = 4

[node name="Chicken2" type="Sprite2D" parent="UI/SignLayer"]
position = Vector2(-8, 48)
scale = Vector2(4, 4)
texture = ExtResource("10_gphno")
flip_h = true
hframes = 4
vframes = 3
frame = 9

[node name="Recap" parent="UI" instance=ExtResource("6_lr767")]
position = Vector2(560, 320)

[node name="Label1" type="Label" parent="UI/Recap"]
offset_left = -304.0
offset_top = -136.0
offset_right = 304.0
offset_bottom = -62.0
theme_override_fonts/font = ExtResource("7_ilae5")
theme_override_font_sizes/font_size = 64
text = "Level Complete!"
horizontal_alignment = 1
vertical_alignment = 1

[node name="Label2" type="Label" parent="UI/Recap"]
offset_left = -232.0
offset_top = -56.0
offset_right = 232.0
offset_bottom = -24.0
theme_override_fonts/font = ExtResource("7_ilae5")
theme_override_font_sizes/font_size = 36
text = "...in XX:XX.XX
"
horizontal_alignment = 1
vertical_alignment = 1

[node name="Label3" type="Label" parent="UI/Recap"]
offset_left = -216.0
offset_top = 8.0
offset_right = 216.0
offset_bottom = 50.0
theme_override_colors/font_color = Color(0.67451, 1, 0.666667, 1)
theme_override_fonts/font = ExtResource("7_ilae5")
theme_override_font_sizes/font_size = 48
text = "Poultry in motion!"
horizontal_alignment = 1
vertical_alignment = 1

[node name="Time" type="Label" parent="UI/Recap"]
offset_left = 184.0
offset_top = -40.0
offset_right = 286.0
offset_bottom = -8.0
theme_override_fonts/font = ExtResource("7_ilae5")
theme_override_font_sizes/font_size = 24
text = "<xx:xx"
horizontal_alignment = 1
vertical_alignment = 1

[node name="Gems" type="Label" parent="UI/Recap"]
offset_left = 192.0
offset_top = 24.0
offset_right = 294.0
offset_bottom = 56.0
theme_override_fonts/font = ExtResource("7_ilae5")
theme_override_font_sizes/font_size = 24
text = "0/1"
horizontal_alignment = 1
vertical_alignment = 1

[node name="Coins" type="Label" parent="UI/Recap"]
offset_left = 184.0
offset_top = 88.0
offset_right = 286.0
offset_bottom = 120.0
theme_override_fonts/font = ExtResource("7_ilae5")
theme_override_font_sizes/font_size = 24
text = "0/20"
horizontal_alignment = 1
vertical_alignment = 1

[node name="Exit" parent="UI/Recap" instance=ExtResource("8_6x3ix")]
offset_left = -188.0
offset_top = 64.0
offset_right = 196.0
offset_bottom = 114.0

[node name="Egg1" parent="UI/Recap" instance=ExtResource("9_fji2h")]
position = Vector2(296, -48)

[node name="Egg2" parent="UI/Recap" instance=ExtResource("9_fji2h")]
position = Vector2(296, 16)

[node name="Egg3" parent="UI/Recap" instance=ExtResource("9_fji2h")]
position = Vector2(296, 80)

[node name="Clock" type="Sprite2D" parent="UI/Recap"]
position = Vector2(240, -48)
scale = Vector2(2, 2)
texture = ExtResource("10_7r0pf")

[node name="Coin" type="Sprite2D" parent="UI/Recap"]
position = Vector2(240, 80)
scale = Vector2(2, 2)
texture = ExtResource("11_xvkvi")
hframes = 6

[node name="Gem" type="Sprite2D" parent="UI/Recap"]
position = Vector2(240, 16)
scale = Vector2(2, 2)
texture = ExtResource("12_lwgru")
hframes = 5

[node name="Death" parent="UI" instance=ExtResource("6_lr767")]
position = Vector2(560, 320)

[node name="Label1" type="Label" parent="UI/Death"]
offset_left = -336.0
offset_top = -96.0
offset_right = 344.0
offset_bottom = -24.0
theme_override_colors/font_color = Color(0.545098, 0, 0, 1)
theme_override_colors/font_outline_color = Color(0, 0, 0, 1)
theme_override_constants/outline_size = 0
theme_override_fonts/font = ExtResource("7_ilae5")
theme_override_font_sizes/font_size = 70
text = "Looks like trouble!"
horizontal_alignment = 1
autowrap_mode = 2

[node name="Restart" type="Button" parent="UI/Death"]
offset_left = -128.0
offset_top = 8.0
offset_right = 128.0
offset_bottom = 48.0
theme_override_fonts/font = ExtResource("7_ilae5")
theme_override_font_sizes/font_size = 36
text = "Restart (R)"

[node name="Exit" type="Button" parent="UI/Death"]
offset_left = -160.0
offset_top = 64.0
offset_right = 160.0
offset_bottom = 112.0
theme_override_fonts/font = ExtResource("7_ilae5")
theme_override_font_sizes/font_size = 40
text = "Return to menu"

[node name="Gold" parent="UI" instance=ExtResource("13_gl4ek")]
position = Vector2(8, 64)

[node name="Health" parent="UI" instance=ExtResource("14_hr6wk")]
position = Vector2(0, 8)

[node name="Pause" parent="UI" instance=ExtResource("15_gx56j")]
visible = false

[node name="Control" parent="UI" instance=ExtResource("16_8anjg")]
offset_left = 1096.0
offset_top = 16.0
offset_right = 1138.0
offset_bottom = 58.0

[connection signal="body_entered" from="Features/Sign" to="." method="_on_sign_body_entered"]
[connection signal="body_exited" from="Features/Sign" to="." method="_on_sign_body_exited"]
[connection signal="body_entered" from="Features/Flag" to="." method="_on_flag_body_entered"]
[connection signal="pressed" from="UI/Recap/Exit" to="." method="_on_exit_pressed"]
[connection signal="pressed" from="UI/Death/Restart" to="." method="_on_restart_pressed"]
[connection signal="pressed" from="UI/Death/Exit" to="." method="_on_exit_pressed"]
[connection signal="pressed" from="UI/Control" to="." method="_on_control_pressed"]
